src/qt/pivx/res/css/style_light.css
/* ... */
QPushButton[cssClass="btn-check-text"] {
  background-color: transparent;
  color: #FFFFFF;
  font-size: 18px;
}

QPushButton[cssClass="btn-check-text"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-text-theme"] {
  background-color: transparent;
  color: #FFFFFF;
  font-size: 18px;
}

QPushButton[cssClass="btn-check-text-theme"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-theme"] {
  background-color: transparent;
  color: #FFFFFF;
  qproperty-icon: url("://ic-check-theme-dark") off, url("://ic-check-theme-light") on;
  qproperty-iconSize: 24px 24px;
  border-radius: 2px;
}

QPushButton[cssClass="btn-check-theme-dark"] {
  background-color: transparent;
  color: #FFFFFF;
  qproperty-icon: url("://ic-check-theme-dark") off, url("://ic-check-theme-dark") on;
  qproperty-iconSize: 24px 24px;
  border-radius: 2px;
}

QPushButton[cssClass="btn-check-theme-light"] {
  background-color: transparent;
  color: #FFFFFF;
  qproperty-icon: url("://ic-check-theme-light") off, url("://ic-check-theme-light") on;
  qproperty-iconSize: 24px 24px;
  border-radius: 2px;
}

QPushButton[cssClass="btn-check-theme"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-peers"] {
  qproperty-icon: url("://ic-check-peers");
  qproperty-iconSize: 24px 24px;
  background-color: transparent;
  color: #FFFFFF;
  border-radius: 2px;
}

QPushButton[cssClass="btn-check-peers"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-peers-inactive"] {
  qproperty-icon: url("://ic-check-peers-off");
  qproperty-iconSize: 24px 24px;
  background-color: transparent;
  color: #FFFFFF;
  border-radius: 2px;
}

QPushButton[cssClass="btn-check-lock-sub-menu-unlocked"] {
  background-image: url("://ic-submenu-unlock");
  background-position: left center;
  background-repeat: no-repeat;
  background-color: transparent;
  text-align: left;
  padding-left: 30px;
  color: #FFFFFF;
  border-bottom: 0px;
  border-radius: 0px;
}

QPushButton[cssClass="btn-check-lock-sub-menu-unlocked"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-unlocked"]:hover {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-unlocked"]:checked:hover {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-locked"] {
  background-image: url("://ic-submenu-lock");
  background-position: left center;
  background-repeat: no-repeat;
  background-color: transparent;
  text-align: left;
  padding-left: 30px;
  color: #FFFFFF;
  border-bottom: 0px;
  border-radius: 0px;
}

QPushButton[cssClass="btn-check-lock-sub-menu-locked"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-locked"]:hover {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-locked"]:checked:hover {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-staking"] {
  background-image: url("://ic-submenu-staking");
  background-position: left center;
  background-repeat: no-repeat;
  background-color: transparent;
  text-align: left;
  padding-left: 30px;
  color: #FFFFFF;
  border-bottom: 0px;
  border-radius: 0px;
}

QPushButton[cssClass="btn-check-lock-sub-menu-staking"]:checked {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-staking"]:hover {
  background-color: transparent;
  color: #FFFFFF;
}

QPushButton[cssClass="btn-check-lock-sub-menu-staking"]:checked:hover {
  background-color: transparent;
  color: #FFFFFF;
}

*[cssClass="top-sub-menu"] {
    background-color: transparent;
}

*[cssClass="top-sub-menu-text"] {
  color: #FFFFFF;
}

QProgressBar[cssClass="progress-sync"] {
  border: 0;
  background-color: transparent;
}

QProgressBar[cssClass="progress-sync"]::chunk:horizontal {
  background: qlineargradient(
    x1: 0,
    y1: 0.5,
    x2: 1,
    y2: 0.5,
    stop: 0 #128E92,
    stop: 1 #18BCC1,
    stop: 2 #0F0F0F
  );
}

/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH       LISTS ELEMENTS
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

*[cssClass="text-list-title-purple"] {
  color: #262626;
  font-size: 20px;
}

*[cssClass="text-list-contact-title1"] {
  color: #262626;
  font-size: 16px;
}

*[cssClass="text-list-title1"] {
  color: #262626;
  font-size: 16px;
}

*[cssClass="text-list-body1-purple"] {
  color: #262626;
  font-size: 14px;
}

*[cssClass="text-list-body1"] {
  color: #707070;
  font-size: 16px;
}

*[cssClass="text-list-body-unconfirmed"] {
  color: #b6b6b6;
  font-size: 16px;
}

*[cssClass="text-list-body2"] {
  color: #707070;
  font-size: 15px;
}

*[cssClass="text-list-contact-body1"] {
  color: #707070;
  font-size: 16px;
}

*[cssClass="text-list-body1-grey"] {
  color: #707070;
  font-size: 16px;
}

*[cssClass="text-list-body2-grey"] {
  color: #707070;
  font-size: 14px;
}

*[cssClass="text-list-caption"] {
  color: #575757;
  font-size: 12px;
}

*[cssClass="text-list-caption-medium"] {
  color: #b9b9b9;
  font-size: 14px;
}

*[cssClass="text-list-caption-medium-green"] {
  color: #1e5e37;
  font-size: 14px;
}

*[cssClass="text-list-caption-unconfirmed"] {
  color: #717171;
}

*[cssClass="text-list-caption-grey"] {
  color: #575757;
  font-size: 12px;
}

*[cssClass="text-list-amount-receive"] {
  color: #147B7F;
  font-size: 16px;
}

*[cssClass="text-list-amount-send"] {
  color: #5C223C;
  font-size: 16px;
}

*[cssClass="text-list-amount-unconfirmed"] {
  color: #717171;
  font-size: 16px;
}

/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH       TEXT
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

*[cssClass="text-title-screen"] {
  color: #262626;
  font-size: 22px;
}

*[cssClass="text-title-dialog"] {
  color: #262626;
  font-size: 22px;
}
/* ... */

